@@ -96,6 +96,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.10</version>
                 <configuration>
                     <argLine>-Xms512m -Xmx512m -XX:MaxPermSize=128M -Dhazelcast.version.check.enabled=false</argLine>
                     <excludes>
@@ -156,11 +157,34 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.10</version>
                         <configuration>
                             <argLine>-Xms512m -Xmx512m -XX:MaxPermSize=128M -Dhazelcast.version.check.enabled=false
                             </argLine>
                             <excludes>
                                 <exclude>**/PerformanceTest.java</exclude>
+                            </excludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        
+        <profile>
+            <id>elastic</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.10</version>
+                        <configuration>
+                            <argLine>-Xms512m -Xmx512m -XX:MaxPermSize=128M -XX:MaxDirectMemorySize=1500m -Dhazelcast.version.check.enabled=false
+                            </argLine>
+                            <excludes>
+                                <exclude>**/PerformanceTest.java</exclude>
+                                <exclude>**/MemoryLeakTest.java</exclude>
+                                <exclude>**/ICountDownLatchTest.java</exclude>
                             </excludes>
                         </configuration>
                     </plugin>
@@ -175,6 +199,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.10</version>
                         <configuration>
                             <argLine>-Xms512m -Xmx512m -XX:MaxPermSize=128M</argLine>
                             <includes>
